# fp-th-intuit-physical

./: .gitignore  README.md  pyproject.toml
configs/: eval.yaml  models.yaml
data/interim/: human_item_time_stats.csv  human_trials_physical_single.csv  prepared_physical_single_items.csv
reports/: benchmark_preparation.md  compute_notes.md  data_access_notes.md  methods_note.md  rhys_contribution_summary.md  rhys_message.md  rhys_tab_intuit_physical.md
results/: prepared_dataset_summary.csv
results/export/: prompts.json  results.json  tasks.json
results/model_outputs/: gpt-4_1_predictions.csv  gpt-5-mini_predictions.csv  gpt-5_4__cot_predictions.csv  gpt-5_4__repeat_predictions.csv  gpt-5_4_predictions.csv
results/tables/: accuracy_by_base_context.csv  accuracy_by_base_context_by_condition.csv  accuracy_by_time_bin.csv  accuracy_by_time_bin_by_condition.csv  benchmark_size.csv  human_by_base_context.csv  human_by_time_bin.csv  human_timing_summary.csv  item_level_results.csv  overall_accuracy.csv  overall_accuracy_by_condition.csv
src/: analyze_results.py  download_data.py  export_project_json.py  extract_human_times.py  plot_results.py  prepare_intuit.py  prompting.py  run_eval.py  utils.py
src/fp_th_intuit_physical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
