[project]
name = "fp-th-intuit-physical"
version = "0.1.0"
description = "Forward-pass evaluation on the INTUIT physical-only benchmark"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.1",
  "openai>=1.68.2",
  "pandas>=2.2",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.0.1",
  "scipy>=1.14",
  "seaborn>=0.13",
  "statsmodels>=0.14.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
